--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- <link rel="stylesheet" href="styles/app.css" /> -->
   </head>
 
-  <body>
+  <body style="margin: 0;">
     <div id="app"></div>
     <script src="bundle.js"></script>
   </body>
