--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Full Stack React</title>
-    <meta name="description" content="Full Stack React Practice" />
+    <title>Constructional Affection</title>
+    <meta name="description" content="Constructional Affection" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -11,7 +11,7 @@
     <!-- <link rel="stylesheet" href="styles/app.css" /> -->
   </head>
 
-  <body style="margin: 0;">
+  <body>
     <div id="app"></div>
     <script src="bundle.js"></script>
   </body>
