--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <script
+      type="text/javascript"
+      src="//cdn.embed.ly/player-0.1.0.min.js"
+    ></script>
     <!-- <link rel="stylesheet" href="styles/app.css" /> -->
   </head>
 
