--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Constructional Affection</title>
+    <title>Test</title>
     <meta name="description" content="Constructional Affection" />
     <link
       rel="stylesheet"
