--- a/index.html
+++ b/index.html
@@ -3,8 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Test</title>
-    <meta name="description" content="Constructional Affection" />
+    <title>Constructional Affection</title>
+    <meta name="author" content="Chase Owens" />
+    <meta name="description" content="Affection. Love. Praise." />
+    <meta
+      name="keywords"
+      content="Chase Owens, Sean Will, Morgan Katz, hyperactive, hyper, puppy, training, calm, dog, dog training"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:url" content="http://www.constructionalaffection.com/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="http://www.constructionalaffection.com/src/images/Bryson_Curly.png"
+    />
+    <meta
+      property="og:title"
+      content="Constructional Affection - Becoming Best Friends"
+    />
+    <meta property="og:description" content="Affection. Love. Praise." />
+    <link rel="icon" href="faviconCA.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="40x40"
+      href="src/images/apple-touch-icon-40.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="src/images/apple-touch-icon-57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="58x58"
+      href="src/images/apple-touch-icon-58.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="src/images/apple-touch-icon-60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="src/images/apple-touch-icon-71.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="87x87"
+      href="src/images/apple-touch-icon-87.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="src/images/apple-touch-icon-114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="src/images/apple-touch-icon-120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="src/images/apple-touch-icon-144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="src/images/apple-touch-icon-152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="167x167"
+      href="src/images/apple-touch-icon-167.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="src/images/apple-touch-icon-180.png"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
