--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="http://www.constructionalaffection.com/src/images/Bryson_Curly.png"
+      content="http://www.constructionalaffection.com/src/images/Bryson_Curly12.jpg"
     />
     <meta
       property="og:title"
